try to implemment with babylonjs

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,9 +19,9 @@
         <canvas class="output_canvas" width="1280px" height="720px"></canvas>
     </div>
     <div>
-        <canvas id="can"></canvas>
+        <canvas id="renderCanvas"></canvas>
     </div>
-    <script type="module" src="../js/3Denv.js"></script>
+    <script type="module" src="../js/babEnv.js"></script>
     <!-- <script type="module" src="../js/handTracking.js"></script> -->
 
 </body>
