add grabing box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div>
         <canvas id="renderCanvas"></canvas>
     </div>
-    <script type="module" src="./src/babEnv.ts"></script>
+    <!-- <script src="./node_modules/ammo.js/builds/ammo.js"></script> -->
+    <script type="module" src="./src/main.ts"></script>
 </body>
 
 </html>
